fixed ea