@@ -4,8 +4,8 @@ import me.sanderson.ea.Chromosome;
 import me.sanderson.ea.Parameters;
 import me.sanderson.ea.Point;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Unmodifiable;
 
+import java.util.Arrays;
 import java.util.List;
 
 public enum Crossover {
@@ -18,7 +18,7 @@ public enum Crossover {
      * @param parent2 A {@link Chromosome} from the population.
      * @return A collection of children ({@link Chromosome}s) from the population.
      */
-    public static @NotNull @Unmodifiable List<Chromosome> uniform(@NotNull Chromosome parent1, @NotNull Chromosome parent2) {
+    public static @NotNull List<Chromosome> uniform(@NotNull Chromosome parent1, @NotNull Chromosome parent2) {
         Chromosome child1 = new Chromosome();
         Chromosome child2 = new Chromosome();
         int i = 0;
@@ -34,7 +34,7 @@ public enum Crossover {
                 i++;
             } while (i < parent1.getPoints().size());
         }
-        return List.of(child1, child2);
+        return Arrays.asList(child1, child2);
     }
 
     /**
@@ -44,9 +44,9 @@ public enum Crossover {
      * @param parent2 A {@link Chromosome} from the population.
      * @return A collection of children ({@link Chromosome}s) from the population.
      */
-    public static @NotNull @Unmodifiable List<Chromosome> onePoint(@NotNull Chromosome parent1, @NotNull Chromosome parent2) {
-        Chromosome child1 = new Chromosome();
-        Chromosome child2 = new Chromosome();
+    public static @NotNull List<Chromosome> onePoint(@NotNull Chromosome parent1, @NotNull Chromosome parent2) {
+        Chromosome child1 = parent1.copy();
+        Chromosome child2 = parent2.copy();
 
         int cut = Parameters.RANDOM.nextInt(parent1.getPoints().size());
 
@@ -59,7 +59,7 @@ public enum Crossover {
                 child2.getPoints().set(i, parent1.getPoints().get(i));
             }
         }
-        return List.of(child1, child2);
+        return Arrays.asList(child1, child2);
     }
 
 
@@ -70,7 +70,7 @@ public enum Crossover {
      * @param parent2 A {@link Chromosome} from the population.
      * @return A collection of children ({@link Chromosome}s) from the population.
      */
-    public static @NotNull @Unmodifiable List<Chromosome> twoPoint(@NotNull Chromosome parent1, @NotNull Chromosome parent2) {
+    public static @NotNull List<Chromosome> twoPoint(@NotNull Chromosome parent1, @NotNull Chromosome parent2) {
         Chromosome child1 = new Chromosome();
         Chromosome child2 = new Chromosome();
         int cut1 = Parameters.RANDOM.nextInt(parent1.getPoints().size());
@@ -85,7 +85,7 @@ public enum Crossover {
                 child2.getPoints().set(i, parent1.getPoints().get(i));
             }
         }
-        return List.of(child1, child2);
+        return Arrays.asList(child1, child2);
     }
 
     /**
@@ -95,7 +95,7 @@ public enum Crossover {
      * @param parent2 A {@link Chromosome} from the population.
      * @return A collection of children ({@link Chromosome}s) from the population.
      */
-    public static @NotNull @Unmodifiable List<Chromosome> arithmetic(@NotNull Chromosome parent1, @NotNull Chromosome parent2) {
+    public static @NotNull List<Chromosome> arithmetic(@NotNull Chromosome parent1, @NotNull Chromosome parent2) {
         Chromosome child = new Chromosome();
 
         for (int i = 0; i < parent1.getPoints().size(); i++) {
@@ -106,6 +106,6 @@ public enum Crossover {
             child.getPoints().set(i, new Point(tempAverage, timeAverage, valueAverage));
         }
 
-        return List.of(child);
+        return Arrays.asList(child);
     }
 }
